--- a/index.html
+++ b/index.html
@@ -324,10 +324,25 @@
 </body>
 </html>
 <br><br>
-<div style="text-align: center;">
-    <!-- <p class="fs-5 text-white-70 mb-0">© 2023. All rights reserved.  </p> -->
-     <li class="link"><a href="https://christophe210.github.io/Tsinda-Media_App/"  target="_blank"> developed  by Tsinda Media Ltd</a></li>
-    <p style="color: blue;">&copy; 2024</p>
-  </div>   
-
+	<footer
+	class="site-footer" id="colophon" itemtype="https://schema.org/WPFooter" itemscope="itemscope" itemid="#colophon">
+				<div class="site-below-footer-wrap ast-builder-grid-row-container site-footer-focus-item ast-builder-grid-row-2-equal ast-builder-grid-row-tablet-2-equal ast-builder-grid-row-mobile-full ast-footer-row-stack ast-footer-row-tablet-stack ast-footer-row-mobile-stack" data-section="section-below-footer-builder">
+		<div class="ast-builder-grid-row-container-inner">
+						<div class="ast-builder-footer-grid-columns site-below-footer-inner-wrap ast-builder-grid-row">
+												<div class="site-footer-below-section-1 site-footer-section site-footer-section-1">
+									<div class="ast-builder-layout-element ast-flex site-footer-focus-item ast-footer-copyright" data-section="section-footer-builder">
+					<div class="ast-footer-copyright"><p>Copyright © 2024 𝗪𝗢𝗥𝗟𝗗 𝗕𝗔𝗡𝗞 𝗟𝗢𝗚</p>
+	</div>          </div>
+							</div>
+												<div class="site-footer-below-section-2 site-footer-section site-footer-section-2">
+								<div class="footer-widget-area widget-area site-footer-focus-item ast-footer-html-1" data-section="section-fb-html-1">
+				<div class="ast-header-html inner-link-style-"><div class="ast-builder-html-element"><p>Developed by 
+					<a href="http://tsindamedia.com/" target="_blank" style="color: #1DAE22;">Tsinda Media </a></p>
+	</div></div>        </div>
+							</div>
+											</div>
+				</div>
+	
+	</div>
+		</footer>
 
